# pypwdft

./: COMPILATION.md  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.py  versiontest.py
.github/workflows/: build_conda.yml  build_pypi.yml  docs.yml
data/: plot_ch4.py
docs/: api.rst  background.rst  community_guidelines.rst  conf.py  index.rst  installation.rst  usage.rst
docs/_static/css/: custom.css
docs/_templates/: breadcrumbs.html
examples/: .gitignore  example_ch4.py  example_ch4_isosurface.py  example_ch4_orthonormalization.py  example_ch4_transform.py  example_co.py  example_co_isosurface.py  example_he.py
pypwdft/: __init__.py  psystem.py  pypwdft.py  system_builder.py
pypwdft/molecules/: .gitignore  bh3.xyz
tests/: test_ewald.py  test_fft.py  test_psystem.py  test_pwdft.py  test_rec_terms.py  test_systembuilder.py
